# rust_tui_monitor

./: Cargo.toml  LICENSE  README.md  build.bat  build.sh  config.example.toml  run.bat  run.sh
src/: app.rs  config.rs  main.rs  theme.rs  ui.rs
src/system/: info.rs  mod.rs  monitor.rs  network.rs
